[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/GoGodotJamLogo.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Levels/CongratulationsLevel.gd" type="Script" id=2]
[ext_resource path="res://Fonts/8bitOperatorPlus-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/ProfilePicture.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Twitter.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Twitch.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[node name="CongratulationsLevel" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="CongratulationsLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -384.5
margin_top = 57.0
margin_right = 384.5
margin_bottom = 260.0
custom_fonts/normal_font = SubResource( 1 )
text = "CONGRATULATIONS!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.0
margin_top = -59.5
margin_right = 243.0
margin_bottom = -0.5
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "PRESS [wave amp=50 freq=5][color=yellow]R[/color][/wave] TO [wave amp=50 freq=5][color=yellow]PLAY AGAIN[/color][/wave]"
text = "PRESS R TO PLAY AGAIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MuteLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = 15.0
margin_right = 183.0
margin_bottom = 74.0
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "PRESS [wave amp=50 freq=5][color=yellow]M[/color][/wave] TO [wave amp=50 freq=5][color=red]MUTE[/color][/wave]"
text = "PRESS M TO MUTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnmuteLabel" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.5
margin_top = 15.0
margin_right = 202.5
margin_bottom = 74.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "PRESS [wave amp=50 freq=5][color=yellow]M[/color][/wave] TO [wave amp=50 freq=5][color=green]UNMUTE[/color][/wave]"
text = "PRESS M TO UNMUTE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoGodotJamLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -483.818
margin_top = 163.681
margin_right = -291.818
margin_bottom = 205.681
custom_fonts/normal_font = SubResource( 3 )
text = "Game Made For:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoGodotJamLogo" type="Sprite" parent="."]
position = Vector2( 118, 537 )
scale = Vector2( 0.178337, 0.178337 )
texture = ExtResource( 1 )

[node name="MadeByLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -136.319
margin_right = 55.0
margin_bottom = -94.319
custom_fonts/normal_font = SubResource( 4 )
text = "Made By:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -27.0
margin_top = -82.0
margin_right = 129.0
margin_bottom = -40.0
custom_fonts/normal_font = SubResource( 5 )
text = "FelipeRattu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadeByPhoto" type="Sprite" parent="."]
position = Vector2( 433.159, 537 )
scale = Vector2( 0.281376, 0.281376 )
texture = ExtResource( 4 )

[node name="SocialMediaLabel" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -211.0
margin_top = -136.0
margin_right = -82.0
margin_bottom = -94.0
custom_fonts/normal_font = SubResource( 6 )
text = "Follow Me:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Twitter" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -246.594
margin_top = -100.214
margin_right = 65.4065
margin_bottom = 155.786
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Twitch" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -132.43
margin_top = -100.214
margin_right = 179.57
margin_bottom = 155.786
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Twitter" to="." method="_on_Twitter_button_down"]
[connection signal="button_down" from="Twitch" to="." method="_on_Twitch_button_down"]
